--- a/Gowa index.html
+++ b/Gowa index.html
@@ -9,6 +9,6 @@
 <p style="color: red">The style is attribute of paragraph tag</p>
 <span>The element contains tag, attribute and content</span>
   <br> 
-<img src="IMG_0036.pdf" alt="Tiger" width="400" height="320">
+<img src="" alt="Tiger" width="400" height="320">
 </body>
 </html>
