--- a/Gowa index.html
+++ b/Gowa index.html
@@ -8,8 +8,19 @@
        <p>Topic</p>
        <p style="color: red">The style is attribute of paragraph tag</p>
        <span>The element contains tag, attribute and content</span>
-    <br>
     <!-- Show picture -->
-    <img  src="IMG_9512.jpeg"alt="Sunset" width="500" height="550" >
+    <ing  src="IMG_9512.jpeg"alt="Sunset" width="500" height="550" >
+    <div align -"center"
+    video
+    <video width-"320" height-"240" control>
+    <source src-"horse.mp4" type-"video/mp4>
+    </video>
+    </div>
+  <br><br><br>
+  <!--<a herf-"http://www.google.com/">Google</a> -->
+  <a href-"table.html"> Tabal data </a> <br>
+  <a href-"a.html">table</a> <br>
+  <a hert-"slide.html">slide</a>
+      
     </body>
-    </html>
+   </html>
