--- a/Gowa index.html
+++ b/Gowa index.html
@@ -13,11 +13,11 @@
     <div align -"center"
     video
     <video width-"320" height-"240" control>
-    <source src-"horse.mp4" type-"video/mp4>
+    <source src-"IMG_0145.mov" type-"video/mp4>
     </video>
     </div>
   <br><br><br>
-  <!--<a herf-"http://www.google.com/">Google</a> -->
+  
   <a href-"table.html"> Tabal data </a> <br>
   <a href-"a.html">table</a> <br>
   <a hert-"slide.html">slide</a>
