--- a/Gowa index.html
+++ b/Gowa index.html
@@ -13,7 +13,7 @@
     <div align -"center"
     video
     <video width-"320" height-"240" control>
-    <source src-"IMG_0145.mov" type-"video/mp4>
+    <source src-"IMG_9769.jpeg" type-"video/mp4>
     </video>
     </div>
   <br><br><br>
@@ -21,5 +21,5 @@
   <a href-"a.html">table</a> <br>
   <a hert-"slide.html">slide</a>
       
-    </body>
-   </html>
+  </body>
+    </html>
