--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body {
 }
 
 .dropdown-content a:hover {
-  background-color: #99CCFF
+  background-color: #333399
 }
 
 .dropdown:hover .dropdown-content {
